asset uploads, created Avatar Icon Image, set node-path imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "baseUrl": "src",
     "target": "es5",
     "plugins": [{ "name": "typescript-plugin-css-modules" }],
     "lib": [
